# qgit4

./: CMakeLists.txt  bootstrap  build-deb
src/: CMakeLists.txt  annotate.cpp  commitimpl.cpp  consoleimpl.cpp  customactionimpl.cpp  dataloader.cpp  domain.cpp  filecontent.cpp  filelist.cpp  fileview.cpp  git.cpp  listview.cpp  mainimpl.cpp  myprocess.cpp  patchcontent.cpp  patchview.cpp  rangeselectimpl.cpp  revdesc.cpp  revsview.cpp  settingsimpl.cpp  smartbrowse.cpp  treeview.cpp
