project(qgit)
cmake_minimum_required(VERSION 2.6.0)
SET(QGIT_VERSION_MAJOR "2")
SET(QGIT_VERSION_MINOR "3")
SET(QGIT_VERSION_BUILD "0")
find_package(Qt4 REQUIRED)
add_subdirectory(src)

SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "qgit")
SET(CPACK_PACKAGE_VENDOR "qgit")
SET(CPACK_PACKAGE_CONTACT "Rafal Rusin <rafal.rusin@gmail.com>")
SET(CPACK_PACKAGE_VERSION_MAJOR "${QGIT_VERSION_MAJOR}")
SET(CPACK_PACKAGE_VERSION_MINOR "${QGIT_VERSION_MINOR}")
SET(CPACK_PACKAGE_VERSION_PATCH "${QGIT_VERSION_BUILD}")
SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6 (>= 2.3.1-6), libgcc1 (>= 1:3.4.2-12), libqtgui4 (>= 4.5.0-0)")
INCLUDE(CPack)

